@@ -375,11 +375,10 @@ imagep <- function(x, y, z,
     if (is.function(col))
         col <- col(n=length(breaks)-1)
 
-    #browser()
     if (drawPalette == "space") {
         drawPalette(zlab=if(zlabPosition=="side") zlab else "", debug=debug-1)
     } else if (drawPalette) {
-        zlim <- if(missing(zlim)) range(z,na.rm=TRUE) else zlim
+        zlim <- if(missing(zlim)) range(z, na.rm=TRUE) else zlim
         drawTriangles <- rep(drawTriangles, length.out=2)
         drawTriangles[1] <- drawTriangles[1] || any(z < zlim[1], na.rm=TRUE)
         drawTriangles[2] <- drawTriangles[2] || any(z > zlim[2], na.rm=TRUE)
